--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,18 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreen">
 
-    <LinearLayout
-        android:layout_width="150dp"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerInParent="true">
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
+            android:layout_width="125dp"
+            android:layout_centerInParent="true"
+            android:layout_height="125dp"
             android:src="@drawable/bookvan_logo_icon" />
 
-    </LinearLayout>
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:indeterminate="true"
+            android:layout_centerInParent="true"
+            app:mpb_progressStyle="circular"
+            app:mpb_progressBackgroundTint="@color/colorPrimary"
+            app:mpb_indeterminateTint="@color/colorPrimary"
+            app:mpb_progressTint="@color/colorPrimary"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
