--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,10 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:background="@drawable/background_body"
     android:layout_height="match_parent"
-    tools:context=".AdminActivity">
+    android:background="@drawable/background_body"
+    android:fitsSystemWindows="true"
+    tools:context=".AdminActivity"
+    tools:openDrawer="start">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/toolbarContainer"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@drawable/background_toolbar"
+                android:elevation="8dp"
+                app:navigationIcon="@drawable/ic_toolbar_nav"
+                app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
+                app:subtitleTextColor="#FFFFFF"
+                app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
+                app:titleTextColor="#FFFFFF" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:elevation="8dp"
+                android:padding="8dp"
+                android:src="@drawable/bookvan_logo_full" />
+        </RelativeLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/drawer_nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/bottom_nav_view"
+            android:layout_below="@+id/toolbarContainer"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/mobile_navigation_drawer" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_above="@id/bottom_nav_view"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_menu_chat_admin"
+            app:backgroundTint="@color/colorPrimary"
+            app:tint="#FFFFFF" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="?android:attr/windowBackground"
+            app:itemIconTint="@color/colorPrimary"
+            app:itemTextAppearanceActive="@style/ToolbarSubtitleTextAppearance"
+            app:itemTextColor="@color/colorPrimaryDark"
+            app:menu="@menu/bottom_nav_menu_admin" />
+
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:itemIconTint="@color/colorPrimary"
+        app:itemTextAppearance="@style/ToolbarSubtitleTextAppearance"
+        app:itemTextColor="@color/colorPrimaryDark"
+        app:menu="@menu/nav_drawer_header" />
+</androidx.drawerlayout.widget.DrawerLayout>
