--- a/app/src/main/res/layout/booking_item_layout.xml
+++ b/app/src/main/res/layout/booking_item_layout.xml
@@ -240,18 +240,31 @@
                             android:layout_width="match_parent"
                             android:layout_height="16dp" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato_bold"
-                            android:text="P000.00"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
-                            android:textColor="@color/colorPrimaryDark" />
+                            android:orientation="horizontal"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="P"
+                                android:textAppearance="?attr/textAppearanceHeadline6"
+                                android:textColor="@color/colorPrimaryDark" />
+                            <TextView
+                                android:id="@+id/checkoutTotal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/lato_bold"
+                                android:text="000.00"
+                                android:textAppearance="?attr/textAppearanceHeadline6"
+                                android:textColor="@color/colorPrimaryDark" />
+                        </LinearLayout>
+
 
                     </LinearLayout>
 
                 </LinearLayout>
-
 
             </LinearLayout>
 
