--- a/app/src/main/res/drawable/background_dialog.xml
+++ b/app/src/main/res/drawable/background_dialog.xml
@@ -2,7 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="#4ABAFF"
-        android:startColor="#0795FF" />
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimary"/>
     <corners android:radius="10dp" />
+
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorPrimaryDark" />
+
 </shape>
