--- a/app/src/main/res/layout/dialog_login_layout.xml
+++ b/app/src/main/res/layout/dialog_login_layout.xml
@@ -25,7 +25,7 @@
             android:fontFamily="@font/lato_black"
             android:text="Login"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="26sp" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -33,13 +33,16 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:hintTextColor="#FFFFFF"
             android:hint="@string/register_email"
             app:boxStrokeColor="#FFFFFF"
-            app:startIconDrawable="@drawable/ic_register_email">
+            app:hintTextColor="#FFFFFF"
+            app:startIconDrawable="@drawable/ic_input_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -50,13 +53,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/register_password"
-            app:hintTextColor="#FFFFFF"
             app:boxStrokeColor="#FFFFFF"
+            app:hintTextColor="#FFFFFF"
             app:endIconMode="password_toggle"
-            app:startIconDrawable="@drawable/ic_register_password">
+            app:startIconDrawable="@drawable/ic_input_password">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -67,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="@color/white"
             android:drawableLeft="@drawable/ic_menu_login"
             android:drawablePadding="0dp"
             android:drawableTint="@color/colorPrimary"
@@ -75,7 +81,7 @@
             android:paddingEnd="40dp"
             android:text="@string/loginText"
             android:textAppearance="@style/ButtonTextAppearance"
-            android:textColor="#121212" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,30 +123,30 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:backgroundTint="#FFFFFF"
-            android:drawableLeft="@drawable/ic_register_facebook"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_input_facebook"
             android:drawablePadding="0dp"
             android:drawableTint="@color/colorPrimary"
             android:paddingStart="40dp"
             android:paddingEnd="40dp"
             android:text="Login using Facebook"
             android:textAppearance="@style/ButtonTextAppearance"
-            android:textColor="#121212" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <Button
             android:id="@+id/btnLoginGoogle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:backgroundTint="#FFFFFF"
-            android:drawableLeft="@drawable/ic_register_google"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_input_google"
             android:drawablePadding="0dp"
             android:drawableTint="@color/colorPrimary"
             android:paddingStart="40dp"
             android:paddingEnd="40dp"
             android:text="Login using Google"
             android:textAppearance="@style/ButtonTextAppearance"
-            android:textColor="#121212" />
+            android:textColor="@color/colorPrimaryDark" />
 
     </LinearLayout>
 </LinearLayout>
