--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -27,7 +27,7 @@
                 android:layout_marginBottom="16dp"
                 android:gravity="center"
                 android:hint="Name"
-                app:startIconDrawable="@drawable/ic_register_fullname">
+                app:startIconDrawable="@drawable/ic_input_name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
