--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,13 +35,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+        android:orientation="vertical"
+        android:layout_margin="16dp">
 
         <TextView
             android:layout_width="match_parent"
             android:textAlignment="center"
             android:fontFamily="@font/lato_bold"
-            android:textSize="16sp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:layout_height="match_parent"
+            android:text="Hello World" />
+        <TextView
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:fontFamily="@font/lato"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:layout_height="match_parent"
             android:text="Hello World" />
     </LinearLayout>
