--- a/app/src/main/res/drawable/background_dialog.xml
+++ b/app/src/main/res/drawable/background_dialog.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimary"/>
+        android:endColor="#FFFFFF"
+        android:startColor="#FFFFFF"/>
     <corners android:radius="10dp" />
 
     <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimaryDark" />
+        android:width="2dp"
+        android:color="#99000000" />
 
 </shape>
