--- a/app/src/main/res/drawable/background_register.xml
+++ b/app/src/main/res/drawable/background_register.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="#4ABAFF"
-        android:startColor="#0795FF" />
+        android:endColor="#FFFFFF"
+        android:startColor="#FFFFFF" />
 </shape>
