--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@drawable/background_toolbar"
                 android:elevation="8dp"
+                app:menu="@menu/toolbar_menu"
                 app:navigationIcon="@drawable/ic_toolbar_nav"
                 app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
                 app:subtitleTextColor="#FFFFFF"
@@ -59,7 +60,7 @@
             android:background="?android:attr/windowBackground"
             app:itemIconTint="@color/colorPrimary"
             app:itemTextAppearanceActive="@style/ToolbarSubtitleTextAppearance"
-            app:itemTextColor="@color/colorPrimaryDark"
+            app:itemTextColor="@color/textColor"
             app:menu="@menu/bottom_nav_menu" />
 
     </RelativeLayout>
@@ -72,6 +73,6 @@
         android:fitsSystemWindows="true"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextAppearance="@style/ToolbarSubtitleTextAppearance"
-        app:itemTextColor="@color/colorPrimaryDark"
+        app:itemTextColor="@color/textColor"
         app:menu="@menu/nav_drawer_header" />
 </androidx.drawerlayout.widget.DrawerLayout>
